more changes made, some refactoring, etc

--- a/frontend/src/sass/base/_base.scss
+++ b/frontend/src/sass/base/_base.scss
@@ -3,6 +3,7 @@
     --color-text-dark: #2b3947;
     --color-text-grayish: #818181;
     --color-text-lighter-gray:#d1d1d1;
+    --color-text-important:  #f5461a;
     --color-icons-gold: goldenrod;
     --color-icons-gold-light: rgb(255, 247, 226);
     --color-text: white;
