--- a/frontend/src/sass/helpers/_helperclasses.scss
+++ b/frontend/src/sass/helpers/_helperclasses.scss
@@ -7,3 +7,9 @@
     font-size: 2.1rem;
     display: block;
 }
+
+.generalImportantMessage{
+    font-size: 2.4rem;
+    font-weight: 600;
+    color: var(--color-text-important);
+}
