order pages created.

--- a/frontend/src/sass/base/_base.scss
+++ b/frontend/src/sass/base/_base.scss
@@ -3,9 +3,12 @@
     --color-text-dark: #2b3947;
     --color-text-grayish: #818181;
     --color-text-lighter-gray:#d1d1d1;
+    --color-text-lighter-gray2:#f0f0f0;
     --color-text-important:  #f5461a;
     --color-icons-gold: goldenrod;
     --color-icons-gold-light: rgb(255, 247, 226);
+    --color-success: rgb(9, 143, 9);
+    --color-error: red;
     --color-text: white;
     --color-bg-light: #f9fcff;
     --color-link-hover: #f08040;
