--- a/frontend/src/sass/helpers/_helperclasses.scss
+++ b/frontend/src/sass/helpers/_helperclasses.scss
@@ -13,3 +13,11 @@
     font-weight: 600;
     color: var(--color-text-important);
 }
+
+.success{
+    color: var(--color-success);
+}
+
+.error{
+    color: var(--color-error);
+}
