dashboard page and i created a function that handles the grid layout of the main component.

--- a/frontend/src/sass/components/_header.scss
+++ b/frontend/src/sass/components/_header.scss
@@ -29,6 +29,10 @@
         justify-content: space-around;
 
         min-width: 200px;
+
+        a, span:not(:last-child){
+            margin-right: 1rem;
+        }
     }
 
     a{
