--- a/frontend/src/sass/base/_base.scss
+++ b/frontend/src/sass/base/_base.scss
@@ -8,6 +8,9 @@
     --color-icons-gold: goldenrod;
     --color-icons-gold-light: rgb(255, 247, 226);
     --color-success: rgb(9, 143, 9);
+    --color-light-green: rgb(144, 224, 144);
+    --color-light-purple: rgb(184, 147, 253);
+    --color-light-red: rgb(255, 160, 160);
     --color-error: red;
     --color-text: white;
     --color-bg-light: #f9fcff;
