--- a/frontend/src/sass/helpers/_helperclasses.scss
+++ b/frontend/src/sass/helpers/_helperclasses.scss
@@ -8,6 +8,12 @@
     display: block;
 }
 
+.generalBiggerTitle{
+    font-weight: 700;
+    font-size: 2.6rem;
+    display: block;
+}
+
 .generalImportantMessage{
     font-size: 2.4rem;
     font-weight: 600;
