dashboard fully implemented.

--- a/frontend/src/sass/base/_base.scss
+++ b/frontend/src/sass/base/_base.scss
@@ -1,16 +1,18 @@
 :root{
     --color-background: #203040;
+    --color-dark: #202020;
     --color-text-dark: #2b3947;
+    --color-text-lighter: #66a7e7;
     --color-text-grayish: #818181;
-    --color-text-lighter-gray:#d1d1d1;
-    --color-text-lighter-gray2:#f0f0f0;
+    --color-text-lighter-gray: #b7c5d3;
+    --color-text-lighter-gray2: #eef6ff;
     --color-text-important:  #f5461a;
     --color-icons-gold: goldenrod;
     --color-icons-gold-light: rgb(255, 247, 226);
     --color-success: rgb(9, 143, 9);
-    --color-light-green: rgb(144, 224, 144);
-    --color-light-purple: rgb(184, 147, 253);
-    --color-light-red: rgb(255, 160, 160);
+    --color-light-green: rgb(40, 177, 40);
+    --color-light-purple: rgb(139, 77, 255);
+    --color-light-red: rgb(255, 66, 66);
     --color-error: red;
     --color-text: white;
     --color-bg-light: #f9fcff;
