--- a/frontend/src/sass/helpers/_helperclasses.scss
+++ b/frontend/src/sass/helpers/_helperclasses.scss
@@ -14,6 +14,14 @@
     display: block;
 }
 
+.title{
+    font-weight: 500;
+    letter-spacing: 2px;
+    font-size: 3rem;
+    display: block;
+    color: var(--color-text-dark)
+}
+
 .generalImportantMessage{
     font-size: 2.4rem;
     font-weight: 600;
