--- a/frontend/src/sass/pages/_homepage.scss
+++ b/frontend/src/sass/pages/_homepage.scss
@@ -11,7 +11,7 @@
         display: grid;
         place-items: center;
         grid-gap: 2rem;
-        grid-template-columns: repeat(auto-fill, minmax(33rem, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(33rem, 1fr));
     
     
         &__product{
