--- a/frontend/src/sass/app.scss
+++ b/frontend/src/sass/app.scss
@@ -15,6 +15,7 @@
 @import "components/button";
 @import "components/rating";
 @import "components/select";
+@import "components/navigationdrawer";
  
 @import "base/base";
 @import "helpers/helperclasses";
