multer configurations are done, and the front end is already can create new products with images

--- a/frontend/src/sass/app.scss
+++ b/frontend/src/sass/app.scss
@@ -16,6 +16,7 @@
 @import "components/rating";
 @import "components/select";
 @import "components/navigationdrawer";
+@import "components/dashboardaside";
  
 @import "base/base";
 @import "helpers/helperclasses";
@@ -24,6 +25,7 @@
 @import "pages/signup";
 @import "pages/profile";
 @import "pages/product";
+@import "pages/products";
 @import "pages/signin";
 @import "pages/checkout";
 @import "pages/cart";
