--- a/frontend/src/sass/pages/_order.scss
+++ b/frontend/src/sass/pages/_order.scss
@@ -36,6 +36,9 @@
             width: 10rem;
             height: 10rem;
             margin-right: 2rem;
+
+            color: var(--color-text-grayish);
+            font-size: 1.4rem;
         }
 
         .holder{
