--- a/frontend/src/sass/components/_header.scss
+++ b/frontend/src/sass/components/_header.scss
@@ -9,6 +9,10 @@
     background-color: var(--color-background);
     grid-column: full-start / full-end;
 
+    @media only screen and (max-width: 500px){
+        padding: 2rem 2rem;
+    }
+
     &__menu{
         display: flex;
         align-items: center;
@@ -88,6 +92,7 @@
         input{
             font-weight: 600;
             letter-spacing: 1px;
+            width: 80%;
         }
     }
 }
